--- a/index.html
+++ b/index.html
@@ -14,21 +14,43 @@
     <meta property="og:title" content="Lê Quang Thịnh &amp; Nguyễn Mai Ngọc Wedding site!">
     <meta property="og:url" content="https://preview.iwedding.info">
     <meta property="og:description" content="Lê Quang Thịnh &amp; Nguyễn Mai Ngọc - Our wedding date: 2024-01-01  | Điều tuyệt vời nhất mà bạn từng học là yêu và được yêu để đáp lại">
-    <meta property="og:image" content="https://cdn.biihappy.com/ziiweb/website/61990349db8f76231c132068/88b6d6c5cb36ccd3725c92f0e0b3d89b.jpeg">
-    <meta property="og:image:url" content="https://cdn.biihappy.com/ziiweb/website/61990349db8f76231c132068/88b6d6c5cb36ccd3725c92f0e0b3d89b.jpeg">
-    <meta property="og:image:secure_url" content="https://cdn.biihappy.com/ziiweb/website/61990349db8f76231c132068/88b6d6c5cb36ccd3725c92f0e0b3d89b.jpeg">
+    <!-- <meta property="og:image" content="./image/anh1.jpeg">
+    <meta property="og:image:url" content="./image/anh1.jpeg">
+    <meta property="og:image:secure_url" content="./image/anh1.jpeg"> -->
+    
+    <!-- icon -->
     <link rel="shortcut icon" type="image/x-icon" href="https://iwedding.info/favicon.ico">
+
+
     <link rel="stylesheet" type="text/css" href="https://preview.iwedding.info/templates/template18/css/libs.css?v=20231206">
+
+
     <link href="https://preview.iwedding.info/common/calendar.css?v=20231206" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="https://preview.iwedding.info/templates/template18/css/style.css?v=20231206">
-    <link rel="stylesheet" type="text/css" href="https://preview.iwedding.info/templates/template18/css/responsive.css?v=20231206">
+
+    <link rel="stylesheet" type="text/css" href="./css/responsive.css">
+
     <link href="https://preview.iwedding.info/templates/template18/css/plugin.css?v=20231206" rel="stylesheet" type="text/css">
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+
+    <!-- gg font -->
     <link href="https://fonts.googleapis.com/css?family=Dosis&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Great+Vibes&display=swap" rel="stylesheet">
+
+
+    <!-- temp -->
+    <link rel="stylesheet" type="text/css" href="https://preview.iwedding.info/templates/template18/css/style.css?v=20231206">
+
+    <!-- user link -->
+    <!-- <link rel='stylesheet' type='text/css' href='./css/styles.css'> -->
+    <link rel="stylesheet" type="text/css" href="https://preview.iwedding.info/templates/template18/css/style.css?v=20231206">
+
+
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-K9L0ZFE1PJ"></script>
 	<script>window.dataLayer = window.dataLayer || []; function gtag(){dataLayer.push(arguments);} gtag('js', new Date()); gtag('config', 'G-K9L0ZFE1PJ');</script>
+
+
 </head>
 <body data-spy="scroll" data-target=".navbar-fixed-top" class="home-3">
     <div class="preloader-area">
@@ -105,12 +127,12 @@
             <div class="swiper-container">
                 <div class="swiper-wrapper">
                     <div class="swiper-slide">
-                        <div class="slide-inner slide-bg-image" data-background="https://cdn.biihappy.com/ziiweb/default/template/62ef3cfd4c248a18ec5a9b5a/083ef1ab4729965362dda91a248a2ed8.jpg">
+                        <div class="slide-inner slide-bg-image" data-background="./image/slide_image/slide_image_1.jpg">
                         </div>
                     </div>
 
                     <div class="swiper-slide">
-                        <div class="slide-inner slide-bg-image" data-background="https://cdn.biihappy.com/ziiweb/default/template/62ef3cfd4c248a18ec5a9b5a/aa036712fc1203f79afa3cbcd93ccf0d.jpg">
+                        <div class="slide-inner slide-bg-image" data-background="./image/slide_image/slide_image_2.jpg">
                         </div>
                     </div>
                 </div>
@@ -121,7 +143,7 @@
                 </div>
             </div>
             <div class="seperator">
-                <img src="https://preview.iwedding.info/templates/template18/images/body/layer-5.png" alt="seperator">
+                <img src="./image/body_image/body_image_1.png" alt="seperator">
             </div>
         </section>
 
@@ -134,7 +156,7 @@
                 <div class="col-md-6 col-sm-12">
                     <div class="the-couple wow fadeInLeft uncle">
                         <div class="couple-img">
-                            <img src="https://cdn.biihappy.com/ziiweb/default/website/3b48bc6125ce6d186297a3e90a11085e.jpeg" alt="">
+                            <img src="./image/couple_image/chu_re.jpeg" alt="">
                             <h4>Chú Rể</h4>
                         </div>
                         
@@ -164,7 +186,7 @@
                 <div class="col-md-6 col-sm-12">
                     <div class="the-couple wow fadeInRight bride">
                         <div class="couple-img">
-                            <img src="https://cdn.biihappy.com/ziiweb/default/website/59b631f29bfb9f7cd20437d27ddbe4db.jpeg" alt="">
+                            <img src="./image/couple_image/co_dau.jpeg" alt="">
                             <h4>Cô Dâu</h4>
                         </div>
                         <div class="about-couple">
@@ -241,7 +263,7 @@
                                     <div class="col-sm-6 col-xs-12">
                                         <div class="story-lt-rt story-lt">
                                             <div class="image-story">
-                                                <img src="https://cdn.biihappy.com/ziiweb/website/61990349db8f76231c132068/0f99c255f7aa7714d366ebde51c86d53.jpeg" alt="">
+                                                <img src="./image/chuyen_tinh_yeu/anh_1.jpeg" alt="">
                                             </div>
                                         </div>
                                     </div>
@@ -274,7 +296,7 @@
                                     <div class="col-sm-6 col-xs-12">
                                         <div class="story-lt-rt story-rt">
                                             <div class="image-story">
-                                                <img src="https://cdn.biihappy.com/ziiweb/website/61990349db8f76231c132068/be48dcf2522cd4ecfa7dab2dd4ebd3f9.jpeg" alt="">
+                                                <img src="./image/chuyen_tinh_yeu/anh_1.jpeg" alt="">
                                             </div>
                                         </div>
                                     </div>
@@ -286,7 +308,7 @@
                                     <div class="col-sm-6 col-xs-12">
                                         <div class="story-lt-rt story-lt">
                                             <div class="image-story">
-                                                <img src="https://cdn.biihappy.com/ziiweb/website/61990349db8f76231c132068/d2d08234dd0ece24828f396fa243a1ec.jpeg" alt="">
+                                                <img src="./image/chuyen_tinh_yeu/anh_2.jpeg" alt="">
                                             </div>
                                         </div>
                                     </div>
@@ -320,7 +342,7 @@
                                     <div class="col-sm-6 col-xs-12">
                                         <div class="story-lt-rt story-rt">
                                             <div class="image-story">
-                                                <img src="https://cdn.biihappy.com/ziiweb/website/61990349db8f76231c132068/d37c077f9ad6b076bc531b2d6ba44498.jpeg" alt="">
+                                                <img src="./image/chuyen_tinh_yeu/anh_3.jpeg" alt="">
                                             </div>
                                         </div>
                                     </div>
@@ -346,7 +368,7 @@
                                     <div class="col-sm-6 col-xs-6">
                                         <div class="story-lt-rt story-lt">
                                             <div class="image-story">
-                                                <img src="https://cdn.biihappy.com/ziiweb/website/61990349db8f76231c132068/0f99c255f7aa7714d366ebde51c86d53.jpeg" alt="">
+                                                <img src="./image/chuyen_tinh_yeu/anh_4.jpeg" alt="">
                                             </div>
                                         </div>
                                     </div>
@@ -369,7 +391,7 @@
                                     <div class="col-sm-6 col-xs-6">
                                         <div class="story-lt-rt story-rt">
                                             <div class="image-story">
-                                                <img src="https://cdn.biihappy.com/ziiweb/website/61990349db8f76231c132068/be48dcf2522cd4ecfa7dab2dd4ebd3f9.jpeg" alt="">
+                                                <img src="" alt="./image/chuyen_tinh_yeu/anh_5.jpeg">
                                             </div>
                                         </div>
                                     </div>
@@ -392,7 +414,7 @@
                                     <div class="col-sm-6 col-xs-6">
                                         <div class="story-lt-rt story-lt">
                                             <div class="image-story">
-                                                <img src="https://cdn.biihappy.com/ziiweb/website/61990349db8f76231c132068/d2d08234dd0ece24828f396fa243a1ec.jpeg" alt="">
+                                                <img src="./image/chuyen_tinh_yeu/anh_6.jpeg" alt="">
                                             </div>
                                         </div>
                                     </div>
@@ -415,7 +437,7 @@
                                     <div class="col-sm-6 col-xs-6">
                                         <div class="story-lt-rt story-rt">
                                             <div class="image-story">
-                                                <img src="https://cdn.biihappy.com/ziiweb/website/61990349db8f76231c132068/d37c077f9ad6b076bc531b2d6ba44498.jpeg" alt="">
+                                                <img src="image/chuyen_tinh_yeu/anh_7.jpeg" alt="">
                                             </div>
                                         </div>
                                     </div>
@@ -759,96 +781,96 @@
             <div class="row masonry-gallery">
                                     <div class="col-md-4 col-sm-6 col-xs-6 mix grid-item">
                         <div class="item port-popup">
-                            <a href="https://cdn.biihappy.com/ziiweb/default/website/galleries/61990296d7e97a1853119579/large.jpg" title="">
-                                <img src="https://cdn.biihappy.com/ziiweb/default/website/galleries/61990296d7e97a1853119579/small.jpg" alt="">
+                            <a href="./image/album_hinh_cuoi/anh_1.jpg" title="">
+                                <img src="./image/album_hinh_cuoi/anh_1.jpg" alt="">
                                 <i class="fa fa-search"></i>
                             </a>
                         </div>
                     </div>
                                     <div class="col-md-4 col-sm-6 col-xs-6 mix grid-item">
                         <div class="item port-popup">
-                            <a href="https://cdn.biihappy.com/ziiweb/default/website/galleries/619902a5f7c65c763d2ef0e2/large.jpg" title="">
-                                <img src="https://cdn.biihappy.com/ziiweb/default/website/galleries/619902a5f7c65c763d2ef0e2/small.jpg" alt="">
+                            <a href="./image/album_hinh_cuoi/anh_2.jpg" title="">
+                                <img src="./image/album_hinh_cuoi/anh_2.jpg" alt="">
                                 <i class="fa fa-search"></i>
                             </a>
                         </div>
                     </div>
                                     <div class="col-md-4 col-sm-6 col-xs-6 mix grid-item">
                         <div class="item port-popup">
-                            <a href="https://cdn.biihappy.com/ziiweb/default/website/galleries/619902a0d5c0e352ac024b43/large.jpg" title="">
-                                <img src="https://cdn.biihappy.com/ziiweb/default/website/galleries/619902a0d5c0e352ac024b43/small.jpg" alt="">
+                            <a href="./image/album_hinh_cuoi/anh_3.jpg" title="">
+                                <img src="./image/album_hinh_cuoi/anh_3.jpg" alt="">
                                 <i class="fa fa-search"></i>
                             </a>
                         </div>
                     </div>
                                     <div class="col-md-4 col-sm-6 col-xs-6 mix grid-item">
                         <div class="item port-popup">
-                            <a href="https://cdn.biihappy.com/ziiweb/default/website/galleries/61990322c41d7b37de534633/large.jpg" title="">
-                                <img src="https://cdn.biihappy.com/ziiweb/default/website/galleries/61990322c41d7b37de534633/small.jpg" alt="">
+                            <a href="./image/album_hinh_cuoi/anh_4.jpg" title="">
+                                <img src="./image/album_hinh_cuoi/anh_4.jpg" alt="">
                                 <i class="fa fa-search"></i>
                             </a>
                         </div>
                     </div>
                                     <div class="col-md-4 col-sm-6 col-xs-6 mix grid-item">
                         <div class="item port-popup">
-                            <a href="https://cdn.biihappy.com/ziiweb/default/website/galleries/6199029c1ca1d308fe5da284/large.jpg" title="">
-                                <img src="https://cdn.biihappy.com/ziiweb/default/website/galleries/6199029c1ca1d308fe5da284/small.jpg" alt="">
+                            <a href="./image/album_hinh_cuoi/anh_5.jpg" title="">
+                                <img src="./image/album_hinh_cuoi/anh_5.jpg" alt="">
                                 <i class="fa fa-search"></i>
                             </a>
                         </div>
                     </div>
                                     <div class="col-md-4 col-sm-6 col-xs-6 mix grid-item">
                         <div class="item port-popup">
-                            <a href="https://cdn.biihappy.com/ziiweb/default/website/galleries/61990291c41d7b37de534632/large.jpg" title="">
-                                <img src="https://cdn.biihappy.com/ziiweb/default/website/galleries/61990291c41d7b37de534632/small.jpg" alt="">
+                            <a href="./image/album_hinh_cuoi/anh_6.jpg" title="">
+                                <img src="./image/album_hinh_cuoi/anh_6.jpg" alt="">
                                 <i class="fa fa-search"></i>
                             </a>
                         </div>
                     </div>
                                     <div class="col-md-4 col-sm-6 col-xs-6 mix grid-item">
                         <div class="item port-popup">
-                            <a href="https://cdn.biihappy.com/ziiweb/default/website/galleries/6199028d8d8a4918ca205514/large.jpg" title="">
-                                <img src="https://cdn.biihappy.com/ziiweb/default/website/galleries/6199028d8d8a4918ca205514/small.jpg" alt="">
+                            <a href="./image/album_hinh_cuoi/anh_7.jpg" title="">
+                                <img src="./image/album_hinh_cuoi/anh_7.jpg" alt="">
                                 <i class="fa fa-search"></i>
                             </a>
                         </div>
                     </div>
                                     <div class="col-md-4 col-sm-6 col-xs-6 mix grid-item">
                         <div class="item port-popup">
-                            <a href="https://cdn.biihappy.com/ziiweb/default/website/galleries/6199028adb8f76231c132062/large.jpg" title="">
-                                <img src="https://cdn.biihappy.com/ziiweb/default/website/galleries/6199028adb8f76231c132062/small.jpg" alt="">
+                            <a href="./image/album_hinh_cuoi/anh_6.jpg" title="">
+                                <img src="./image/album_hinh_cuoi/anh_6.jpg" alt="">
                                 <i class="fa fa-search"></i>
                             </a>
                         </div>
                     </div>
                                     <div class="col-md-4 col-sm-6 col-xs-6 mix grid-item">
                         <div class="item port-popup">
-                            <a href="https://cdn.biihappy.com/ziiweb/default/website/galleries/61990285d5c0e352ac024b42/large.jpg" title="">
-                                <img src="https://cdn.biihappy.com/ziiweb/default/website/galleries/61990285d5c0e352ac024b42/small.jpg" alt="">
+                            <a href="./image/album_hinh_cuoi/anh_6.jpg" title="">
+                                <img src="./image/album_hinh_cuoi/anh_6.jpg" alt="">
                                 <i class="fa fa-search"></i>
                             </a>
                         </div>
                     </div>
                                     <div class="col-md-4 col-sm-6 col-xs-6 mix grid-item">
                         <div class="item port-popup">
-                            <a href="https://cdn.biihappy.com/ziiweb/default/website/galleries/619902821ca1d308fe5da283/large.jpg" title="">
-                                <img src="https://cdn.biihappy.com/ziiweb/default/website/galleries/619902821ca1d308fe5da283/small.jpg" alt="">
+                            <a href="./image/album_hinh_cuoi/anh_6.jpg" title="">
+                                <img src="./image/album_hinh_cuoi/anh_6.jpg" alt="">
                                 <i class="fa fa-search"></i>
                             </a>
                         </div>
                     </div>
                                     <div class="col-md-4 col-sm-6 col-xs-6 mix grid-item">
                         <div class="item port-popup">
-                            <a href="https://cdn.biihappy.com/ziiweb/default/website/galleries/6199027ed7e97a1853119578/large.jpg" title="">
-                                <img src="https://cdn.biihappy.com/ziiweb/default/website/galleries/6199027ed7e97a1853119578/small.jpg" alt="">
+                            <a href="./image/album_hinh_cuoi/anh_6.jpg" title="">
+                                <img src="./image/album_hinh_cuoi/anh_6.jpg" alt="">
                                 <i class="fa fa-search"></i>
                             </a>
                         </div>
                     </div>
                                     <div class="col-md-4 col-sm-6 col-xs-6 mix grid-item">
                         <div class="item port-popup">
-                            <a href="https://cdn.biihappy.com/ziiweb/default/website/galleries/619902798d8a4918ca205513/large.jpg" title="">
-                                <img src="https://cdn.biihappy.com/ziiweb/default/website/galleries/619902798d8a4918ca205513/small.jpg" alt="">
+                            <a href="./image/album_hinh_cuoi/anh_5.jpg" title="">
+                                <img src="./image/album_hinh_cuoi/anh_5.jpg" alt="">
                                 <i class="fa fa-search"></i>
                             </a>
                         </div>
