--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
     <meta property="og:title" content="Lê Quang Thịnh &amp; Nguyễn Mai Ngọc Wedding site!">
     <meta property="og:url" content="https://preview.iwedding.info">
     <meta property="og:description" content="Lê Quang Thịnh &amp; Nguyễn Mai Ngọc - Our wedding date: 2024-01-01  | Điều tuyệt vời nhất mà bạn từng học là yêu và được yêu để đáp lại">
-    <!-- <meta property="og:image" content="./image/anh1.jpeg">
+    <meta property="og:image" content="./image/anh1.jpeg">
     <meta property="og:image:url" content="./image/anh1.jpeg">
-    <meta property="og:image:secure_url" content="./image/anh1.jpeg"> -->
+    <meta property="og:image:secure_url" content="./image/anh1.jpeg">
     
     <!-- icon -->
     <link rel="shortcut icon" type="image/x-icon" href="https://iwedding.info/favicon.ico">
@@ -27,7 +27,9 @@
 
     <link href="https://preview.iwedding.info/common/calendar.css?v=20231206" rel="stylesheet">
 
-    <link rel="stylesheet" type="text/css" href="./css/responsive.css">
+    <!-- <link rel="stylesheet" type="text/css" href="./css/responsive.css"> -->
+    <link rel="stylesheet" type="text/css" href="https://preview.iwedding.info/templates/template18/css/style.css?v=20231206">
+    <link rel="stylesheet" type="text/css" href="https://preview.iwedding.info/templates/template18/css/responsive.css?v=20231206">
 
     <link href="https://preview.iwedding.info/templates/template18/css/plugin.css?v=20231206" rel="stylesheet" type="text/css">
 
@@ -39,12 +41,6 @@
     <link href="https://fonts.googleapis.com/css?family=Great+Vibes&display=swap" rel="stylesheet">
 
 
-    <!-- temp -->
-    <link rel="stylesheet" type="text/css" href="https://preview.iwedding.info/templates/template18/css/style.css?v=20231206">
-
-    <!-- user link -->
-    <!-- <link rel='stylesheet' type='text/css' href='./css/styles.css'> -->
-    <link rel="stylesheet" type="text/css" href="https://preview.iwedding.info/templates/template18/css/style.css?v=20231206">
 
 
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-K9L0ZFE1PJ"></script>
